# DecoyComp

./: .gitignore  analyse_datasets(best).py  analyse_datasets(best_old).py  analyse_datasets.py  analyse_datasets[old].py  analyse_muv.py  analyser.py  cache_manager.py  dataset_comparison_executive_summary.ipynb  datasets.py  debug_pdb.py  debug_pdb_simple.py  metrics.py  molecular_utils.py  pyproject.toml
tests/: __init__.py  conftest.py  test_analyser.py  test_datasets.py  test_descriptors.py
