[project]
name = "decoycomp"
version = "0.1.0"
description = "Comprehensive analysis and comparison of molecular benchmark datasets for virtual screening"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core data processing
    "polars>=1.0",
    "pandas>=2.0",  # Keep for matplotlib/seaborn compatibility
    "numpy>=1.24",

    # Parallel processing & caching
    "joblib>=1.3",

    # Chemistry
    "rdkit>=2023.9",
    "biopython>=1.80",

    # Progress bars
    "tqdm>=4.65",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
muv = [
    "deepchem>=2.7",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
]
dev = [
    "decoycomp[test]",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
analyse-datasets = "analyse_datasets:main"
analyse-muv = "analyse_muv:main"
decoycomp-metrics = "metrics:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["datasets", "analyser", "molecular_utils", "metrics", "analyse_datasets", "analyse_muv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]  # Line too long - handled by line-length

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
